2011-10-21 Kazuhiko
* Now working fine with Firefox.

2010-11-08 gabriel
* The initial commit