@@ -1,3 +1,6 @@
+2012-12-13 Jérome
+* enable UnsavedChanges plugin
+
 2011-10-21 Kazuhiko
 * Now working fine with Firefox.
 
